--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap-icons": "^1.10.4",
     "firebase": "^9.21.0",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -20,6 +21,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4",
+    "yup": "^1.1.1",
     "zustand": "^4.3.8"
   },
   "scripts": {
